<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abl_detail">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_detail_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abl_detail">

            <android.support.design.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="16dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_detail_avatar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/empty_photo"
                        app:civ_border_color="@android:color/darker_gray"
                        app:civ_border_overlay="true"
                        app:civ_border_width="2sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_change_avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_edit_black_24dp"
                        app:civ_circle_background_color="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="@+id/civ_detail_avatar"
                        app:layout_constraintEnd_toEndOf="@+id/civ_detail_avatar"
                        app:layout_constraintHorizontal_bias="0.97"
                        app:layout_constraintStart_toStartOf="@+id/civ_detail_avatar"
                        app:layout_constraintTop_toTopOf="@+id/civ_detail_avatar"
                        app:layout_constraintVertical_bias="1.0" />

                    <EditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/name"
                        android:singleLine="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/civ_detail_avatar" />

                    <EditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:hint="@string/first_name"
                        android:singleLine="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

                    <EditText
                        android:id="@+id/et_middle_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:hint="@string/middle_name"
                        android:singleLine="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/cl_friend_block"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_phone">

                        <ImageView
                            android:id="@+id/iv_date_picker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_date_range_black_24dp" />

                        <TextView
                            android:id="@+id/et_birthday"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:ems="10"
                            android:enabled="false"
                            android:hint="@string/birth"
                            android:inputType="date"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/iv_date_picker"
                            app:layout_constraintTop_toTopOf="parent" />

                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/cl_coll_block"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cl_friend_block">

                        <EditText
                            android:id="@+id/et_work_phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:ems="10"
                            android:hint="@string/work_phone"
                            android:inputType="phone"
                            android:singleLine="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/et_position"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:singleLine="true"
                            android:hint="@string/position"
                            android:inputType="text"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/et_work_phone" />
                    </android.support.constraint.ConstraintLayout>

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:singleLine="true"
                        android:hint="@string/mobile_phone"
                        android:inputType="phone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_middle_name" />


                </android.support.constraint.ConstraintLayout>

            </android.support.design.card.MaterialCardView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="#000"
                app:layout_constraintBottom_toTopOf="@+id/btn_detail_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

            <Button
                android:id="@+id/btn_detail_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/save_text"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>